# filesystem-parser

./: CMakeLists.txt  README.MD
build_make/: CMakeCache.txt  Makefile  cmake_install.cmake  fat16parse
inc/: fat16.h  vector.h
src/: fat16.c  vector.c
